@@ -40,6 +40,7 @@
 	* Added indexes for the cache tables (cache_hash, cache_pages, cache_pagesection)
 	* Added options to change the backends used for each cache (cache_hash, cache_pages, cache_pagesection)
 	* Fixed several issues in t3lib_cache_backend_file
+	* Renamed the "data" column in cache tables to "content" to prevent conflicts with reserved names
 
 2008-09-23  Martin Kutschker  <masi@typo3.org>
 
